# flightdeck

./: .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GOVERNANCE.md  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSIONING.md  flightdeck.yaml  mkdocs.yml  pyproject.toml
.cursor/rules/: flightdeck-ci-artifacts.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  pages.yml  release-pypi.yml  sbom.yml  scorecard.yml  stale.yml  trivy.yml
artifacts/flightdeck-demo-share/: README.md  flightdeck-ui-demo.webm
docs/: cli.md  http-api.md  index.md  operations-and-policy.md  pricing-catalog.md  release-artifact.md  requirements.txt  sdk-integrations.md  sdk.md  troubleshooting.md  ui-roadmap.md  web-ui.md
docs/javascripts/: ask-ai.js
docs/stylesheets/: extra.css
examples/: README.md
examples/ci/: README.md  ledger-gate-policy.yaml  ledger-gate.sh  ledger_gate.py  promote_with_approval.sh
examples/ci/github-actions/: policy-gate-monorepo.yml  policy-gate-pypi.yml  promote-approval-twostep.yml
examples/deploy/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  railway.toml
examples/fleet/: README.md  workspace-staging.example.yaml
examples/integration/: README.md  emit_sample_events.node.mjs  emit_sample_events.py
examples/integration/adoption/: README.md
examples/pricing/: catalog.sample.yaml
examples/quickstart/: README.md  baseline-events.jsonl  candidate-events.jsonl  policy.yaml  pricing-baseline.yaml  pricing-candidate.yaml
examples/quickstart/baseline-release/: release.yaml
examples/quickstart/candidate-release/: release.yaml
schemas/v1/: policy.schema.json  pricing_catalog.schema.json  pricing_table.schema.json  release.schema.json  run_event.schema.json  workspace_public.schema.json
scripts/: generate_schemas.py  quickstart_smoke.py  run_postgres_tests.ps1  run_postgres_tests.sh  smoke.sh
src/flightdeck/: __init__.py  bundle.py  bundled_pricing_age.py  bundled_pricing_bootstrap.py  catalog.py  config.py  db_connect.py  demo_flow.py  doctor.py  ledger.py  models.py  operations.py  pricing_hints.py  quickstart_smoke.py  storage.py  webhooks.py
src/flightdeck/_bundled_quickstart/: __init__.py
src/flightdeck/bundled_pricing/: __init__.py  anthropic.yaml  catalog.yaml  google.yaml  openai.yaml
src/flightdeck/cli/: main.py
src/flightdeck/integrations/: __init__.py  anthropic_messages.py  common.py  crewai_bridge.py  langchain_callback.py  openai_agents.py  openai_chat.py  telemetry.py
src/flightdeck/sdk/: __init__.py  client.py  http_common.py
src/flightdeck/server/: __init__.py  app.py  middleware.py  mutation_access.py
tests/: conftest.py  test_actor_passthrough.py  test_bundle_checksum.py  test_bundle_golden_fixture.py  test_bundled_pricing_age.py  test_cli.py  test_cli_contract.py  test_demo_flow.py  test_doctor.py  test_examples_parse.py  test_init_bundled_pricing.py  test_integrations.py  test_integrations_langchain.py  test_integrations_telemetry.py  test_ledger.py  test_operator_slice.py  test_phase1_features.py  test_quickstart_smoke.py  test_release_verify.py  test_schemas.py  test_sdk_client.py  test_sdk_client_parity.py  test_sdk_http_common.py  test_server_actions.py  test_server_health.py  test_server_ingest.py  test_server_middleware.py  test_spine.py  test_storage_postgres.py  test_version_consistency.py  test_webhooks_dispatch.py  test_webhooks_routes.py  test_webhooks_signing.py  test_webhooks_storage.py  test_webhooks_url_validation.py  test_workspace_info.py
tests/fixtures/golden_bundle/: release.yaml
tests/fixtures/json/: policy_invalid_error_rate_gt_1_v1.json  policy_minimal_v1.json  pricing_table_invalid_negative_price_v1.json  pricing_table_minimal_v1.json  release_artifact_invalid_wrong_kind_v1.json  release_artifact_minimal_v1.json  run_event_invalid_api_version_v0.json  run_event_invalid_missing_release_id_v1.json  run_event_minimal_v1.json
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: actions-approval.spec.ts  diff-ui.spec.ts  security-strip.spec.ts  sidebar.spec.ts  smoke.spec.ts  theme.spec.ts
web/scripts/: capture-demo-artifacts.mjs  e2e-server.mjs  normalize-static-lf.mjs
web/src/: App.tsx  api.ts  branding.ts  index.css  main.tsx  sidebarStorage.ts  themeStorage.ts  uiConfig.ts  urlSearch.ts  useDocumentTitle.ts  vite-env.d.ts
web/src/components/: AppShell.tsx  Badge.tsx  Button.tsx  CopyTextButton.tsx  JsonPanel.tsx  ReleaseLifecycleStrip.tsx  SecurityStatusBar.tsx  SidebarNavLink.tsx  SidebarSettingsMenu.tsx  StatusChip.tsx  ThemeToggle.tsx  (+1 more)
(+91 files in other folders)
